<resources>
    <string name="app_name">Bill Games</string>

    <!--Add Projects -->
    <string name="add_projects_name">project"s name</string>
    <string name="add_projects_description">project"s description</string>

    <!--project described-->
    <string name="project_described_update">Update</string>
    <string name="project_described_join">Want to join</string>
    <string name="project_described_need">Project need</string>

    <!--login strings-->
    <string name="login_button">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_create_account">Create your account</string>

    <!--Here are some page's titles-->
    <string name="interest_title">Projects solicitation</string>
    <string name="projects_title">My projects</string>

    <!--register strings and arrays-->
    <string name="register_interest"> What is your area of interest?</string>
    <string name="register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_delete">Delete</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="add_projects_Description">Description</string>
    <string name="add_projects_add">Add project</string>
    <string name="add_projects_add_category">Selecione uma categoria</string>
    <string name="add_project_need">Do que o projeto precisa?</string>

    <!--Errors-->
    <string name="error_register_loading">Calma tá carregando mano</string>
    <string name="error_register_img_put">Por favor coloque uma a imagem de perfil</string>
    <string name="error_register_add_user">Erro ao adicionar usuario</string>
    <string name="users">users</string>
    <string name="projects">projects</string>

    <string name="add"> + </string>

    <!--styles for projects-->
    <string name="search_users_name">By Name</string>

    <!--Search-->
    <string name="search_main">Search projects</string>
    <string name="search_users_category">By Category</string>
    <string-array name="games_styles">
        <item>RPG</item>
        <item>Platform</item>
        <item>Race</item>
        <item>FPS</item>
        <item>MOBA</item>
        <item>MMORPG</item>
        <item>Sports</item>
        <item>Simulation</item>
        <item>Estrategia</item>
        <item>Tower Defense</item>
        <item>Mundo Aberto</item>
        <item>Aventura</item>
        <item>Arcade</item>
        <item>Luta</item>
    </string-array>

    <!--Array for areas-->
    <string-array name="games_array_areas">
        <item>Select one option</item>
        <item>Programmer</item>
        <item>Designer</item>
        <item>Artist</item>
        <item>Sound Master</item>
    </string-array>

    <!--Array for each area-->
    <string-array name="games_array_sound_master">
        <item>Engenheiro de som</item>
    </string-array>

    <string-array name="games_array_artist">
        <item>Animador</item>
        <item>Roteirista</item>
        <item>Concept Artist</item>
    </string-array>

    <string-array name="games_array_designer">
        <item>Game Designer</item>
        <item>Mobile</item>
    </string-array>

    <string-array name="games_array_programmer">
        <item>Level Designer</item>
        <item>Servidor</item>
        <item>Web</item>
        <item>Tester</item>
        <item>Mobile</item>
        <item>Redes</item>
        <item>2D</item>
        <item>3D</item>
    </string-array>
</resources>