<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edit_email_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:autofillHints=""
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_register"
        app:layout_constraintStart_toStartOf="@+id/edit_password_register"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_password_register"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="301dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_register" />

    <TextView
        android:id="@+id/textview_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_create_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>