<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_selected_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/edittext_name_register"
        android:layout_alignEnd="@+id/edittext_name_register"
        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/bg_button__img_rounded" />

    <EditText
        android:id="@+id/edit_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_password_register"
        android:layout_alignStart="@+id/edit_password_register"
        android:layout_alignEnd="@+id/edit_password_register"
        android:layout_marginStart="0dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edit_password_register"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtxtRegisterPhoneNumber"
        android:layout_alignStart="@+id/edtxtRegisterPhoneNumber"
        android:layout_alignEnd="@+id/edtxtRegisterPhoneNumber"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edittext_name_register"
        android:layout_width="370dp"
        android:layout_height="20dp"
        android:layout_below="@+id/img_photo"
        android:layout_alignStart="@+id/edittext_username_register"
        android:layout_alignEnd="@+id/edittext_username_register"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/edittext_username_register"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_email_register"
        android:layout_alignStart="@+id/edit_email_register"
        android:layout_alignEnd="@+id/edit_email_register"
        android:layout_marginStart="0dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="25dp"
        android:paddingLeft="8dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtxtRegisterPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sp_register_area"
        android:layout_alignStart="@+id/sp_register_area"
        android:layout_alignEnd="@+id/sp_register_area"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="Phone Number"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <Spinner
        android:id="@+id/sp_register_area"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sp_register_line"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp" />

    <Spinner
        android:id="@+id/sp_register_line"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/btn_selected_photo"
        android:layout_alignTop="@+id/btn_selected_photo"
        android:layout_alignEnd="@+id/btn_selected_photo"
        android:layout_alignBottom="@+id/btn_selected_photo"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" />


</RelativeLayout>